--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "vessel-traffic",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "12.16.1"
+  },
   "main": "server.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
